test/types/enum/lydia/use/namingConflictOtherEnum.good
namingConflictOtherEnum.chpl:4: error: symbol a is multiply defined
namingConflictOtherEnum.chpl:6: note: also defined here
